# ai-session-web

./: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  build.rs
.github/workflows/: release.yml
release/: 0.0.1.md
src/: config.rs  error.rs  main.rs
src/api/: handlers.rs  mod.rs  response.rs
src/session/: codex.rs  continue_.rs  jcode.rs  jcode_journal.rs  mod.rs  registry.rs
src/web/: mod.rs
src/web/assets/: app.js  style.css
templates/: config.html  index.html
