[package]
name = "ai-session-web"
version = "0.1.0"
edition = "2021"
authors = ["wanghuawangyu"]
description = "Web UI for managing local CLI session files (Jcode, Codex, Continue)"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
